force-app/main/default/objects/ServiceTerritory/fields/Appointment_Booking_Offset__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Booking_Offset__c</fullName>
    <label>Appointment Booking Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>