force-app/main/default/objects/ServiceTerritory/fields/AppointmentBookingOffset__c.field-meta.xml
<CustomField>
    <fullName>AppointmentBookingOffset__c</fullName>
    <label>Appointment Booking Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>