force-app/main/default/objects/ServiceTerritory/fields/DispatchingOffset__c.field-meta.xml
<CustomField>
    <fullName>DispatchingOffset__c</fullName>
    <description>The offset for automatic dispatching for this Territory</description>
    <label>Dispatching Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>