force-app/main/default/objects/ServiceTerritory/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Districts</valueSetName>
    </valueSet>
</CustomField>