force-app/main/default/objects/ServiceTerritory/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <formula>ParentTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>