force-app/main/default/objects/ServiceTerritory/fields/Parents_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parents_Parent_Name__c</fullName>
    <formula>ParentTerritory.ParentTerritory.Parent_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent&apos;s Parent Name</label>
    <type>Text</type>
</CustomField>