force-app/main/default/objects/ServiceTerritory/fields/PropertyTypeAttribute__c.field-meta.xml
<CustomField>
    <fullName>PropertyTypeAttribute__c</fullName>
    <description>Level 6 Classification based on Property Type</description>
    <formula>Text(PropertyType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Level 6 Classification based on Property Type</inlineHelpText>
    <label>Property Type Attribute</label>
    <type>Text</type>
</CustomField>