force-app/main/default/objects/ServiceTerritory/fields/Related_Case_Queue_name__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Queue_name__c</fullName>
    <description>This needs to contain the Case Queue name of the queue where all the ST related Reclamation/Quality Event cases will be sent to when they are created.</description>
    <inlineHelpText>This needs to contain the Case Queue name of the queue where all the ST related Reclamation/Quality Event cases will be sent to when they are created.</inlineHelpText>
    <label>Related Case Queue name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>