force-app/main/default/objects/ServiceTerritory/fields/Scheduling_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Operating Hours timeslot calendar for the custom Scheduling Component to use. Base value comes from the Metadata, but this can be overridden by linking another Operating Hours calendar here.</description>
    <inlineHelpText>Defines the Operating Hours timeslot calendar for the custom Scheduling Component to use. Base value comes from the Metadata, but this can be overridden by linking another Operating Hours calendar here.</inlineHelpText>
    <label>Scheduling Calendar</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Service Territories</relationshipLabel>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>