force-app/main/default/objects/ServiceTerritory/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>