force-app/main/default/objects/ServiceTerritory/fields/ServiceTerritoryCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritoryCode__c</fullName>
    <label>Service Territory Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>