force-app/main/default/objects/ServiceTerritory/listViews/All_ServiceTerritories.listView-meta.xml
<ListView>
    <fullName>All_ServiceTerritories</fullName>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>OperatingHours</columns>
    <columns>ParentTerritory</columns>
    <columns>LUM_Dispatching_Offset__c</columns>
    <columns>Related_Case_Queue_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Territories</label>
</ListView>