force-app/main/default/objects/ServiceTerritory/listViews/Canada_Territories.listView-meta.xml
<ListView>
    <fullName>Canada_Territories</fullName>
    <columns>Name</columns>
    <columns>CountryAttribute__c</columns>
    <columns>District__c</columns>
    <columns>FSL__TerritoryLevel__c</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <columns>ParentTerritory</columns>
    <columns>Service_Territory__c</columns>
    <columns>LUM_Dispatching_Offset__c</columns>
    <columns>Business_Type__c</columns>
    <columns>ServiceAttribute__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CountryAttribute__c</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>Canada Territories</label>
</ListView>