force-app/main/default/objects/ServiceTerritory/listViews/Lowest_Installation_Territories.listView-meta.xml
<ListView>
    <fullName>Lowest_Installation_Territories</fullName>
    <columns>Name</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentTerritory</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <columns>CustomerSegment__c</columns>
    <columns>FSL__TerritoryLevel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CustomerSegment__c</field>
        <operation>equals</operation>
        <value>1000,1100,4000,4100</value>
    </filters>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FSL__TerritoryLevel__c</field>
        <operation>equals</operation>
        <value>6</value>
    </filters>
    <label>Lowest Installation Territories</label>
</ListView>