force-app/main/default/objects/ServiceTerritory/listViews/Office_Service_Territories.listView-meta.xml
<ListView>
    <fullName>Office_Service_Territories</fullName>
    <columns>Name</columns>
    <columns>ParentTerritory</columns>
    <columns>Office__c</columns>
    <columns>ProfitCenter__c</columns>
    <columns>District__c</columns>
    <columns>CountryAttribute__c</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name</field>
        <operation>contains</operation>
        <value>Office</value>
    </filters>
    <label>Office Service Territories</label>
</ListView>